--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-14  Richard Henderson  <rth@cygnus.com>
 
+	* config/i386/i386.c (legitimize_pic_address): Use Pmode
+	for all CONSTs.
+
+2000-08-14  Richard Henderson  <rth@cygnus.com>
+
 	* configure.in (ia64-*): Set float_format for i386 long double.
 
 	* real.c (GET_REAL): Treat 128-bit INTEL_EXTENDED_IEEE_FORMAT
