--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
 
+	* configure.in (libstdcxx_flags): Remove -isystem $$s/libio/stdio.
+
 	* configure: Make enable_threads and enable_shared defaults  
 	explicit.  Substitute enable_threads into generated Makefiles.
 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*.
