--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in (libstdcxx_flags): Use libstdc++-v3/src/INCLUDES.
+
 2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* configure.in (libstdcxx_flags): Remove -isystem $$s/libio/stdio.
