* arm/linux-elf.h (text_section): Delete declaration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35706 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-15  Richard Earnshaw <rearnsha@arm.com>
 
+	* arm/linux-elf.h (text_section): Delete declaration.
+
+2000-08-15  Richard Earnshaw <rearnsha@arm.com>
+
 	ARM support for unordered FP operations.
 	* arm-protos.h (arm_comparison_operator): Declare.
 	* arm.c (arm_comparison_operator): New function.
