* arm.md (splits generating cond_exec): Disable.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35707 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-15  Richard Earnshaw <rearnsha@arm.com>
 
+	* arm.md (splits generating cond_exec): Disable.
+
+2000-08-15  Richard Earnshaw <rearnsha@arm.com>
+
 	* arm/linux-elf.h (text_section): Delete declaration.
 
 2000-08-15  Richard Earnshaw <rearnsha@arm.com>
