--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-15  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-array-lval-2.c, gcc.dg/c90-const-expr-2.c,
+	gcc.dg/c99-array-lval-2.c, gcc.dg/c99-const-expr-2.c,
+	gcc.dg/c99-func-3.c, gcc.dg/c99-func-4.c: New tests.
+
 2000-08-14  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.other/refinit2.C: New test.
