--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-15  William Cohen  <wcohen@redhat.com>
+
+	* config/sh/elf.h (DWARF2_DEBUGGING_INFO): Defined.
+	(PREFERRED_DEBUGGING_TYPE): Set to dwarf2 info.
+	(DWARF2_ASM_LINE_DEBUG_INFO): Defined.
+
 2000-08-15  Richard Henderson  <rth@cygnus.com>
 
 	* flow.c (mark_used_reg): Set reg_cond_reg appropriately.
