* java/io/ByteArrayOutputStream.java: Merged with Classpath.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35736 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-15  Tom Tromey  <tromey@cygnus.com>
+
+	* java/io/ByteArrayOutputStream.java: Merged with Classpath.
+
 Sun Aug 13 19:53:01 2000  Anthony Green  <green@redhat.com>
 
 	* THANKS: More thanks.
