--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-15  Richard Henderson  <rth@cygnus.com>
+
+	* combine.c (simplify_shift_const): Bound shift count when
+	combining shifts.
+
 Tue Aug 15 17:33:05 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* calls.c (ECF_SP_DEPRESSED): New macro.
