--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-15  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.c-torture/execute/20000815-1.c: New test.
+
 2000-08-15  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-array-lval-2.c, gcc.dg/c90-const-expr-2.c,
