--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-16  Manfred Hollstein  <manfredh@redhat.com>
+
+	* configure.in (libstdcxx-v3): Fix test.
+	* configure: Regenerate.
+
 Wed Aug 16 08:10:32 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* calls.c (calls_function_1, expand_call): Only test
