* reload.c (push_secondary_reload): Revert last change.         If we use a reload_in/out pattern, make the when the same         as the primary reload.         (find_reloads): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35746 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-16  Richard Henderson  <rth@cygnus.com>
+
+	* reload.c (push_secondary_reload): Revert last change.
+	If we use a reload_in/out pattern, make the when the same
+	as the primary reload.
+	(find_reloads): Likewise.
+
 2000-08-16  Manfred Hollstein  <manfredh@redhat.com>
 
 	* configure.in (libstdcxx-v3): Fix test.
