--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* configure.in (*-ibm-aix4.[12]*): Delete test for gnu ld.  Always
+	use t-aix41 when host == target.
+
 2000-08-16  Richard Henderson  <rth@cygnus.com>
 
 	* reload.c (push_secondary_reload): Revert last change.
