* config/sh/lib1funcs.asm (GLOBAL): Define.  Use for all references to GLOBAL symbols.  Use LOCAL where appropriate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35752 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-16  Niibe Yutaka  <gniibe@m17n.org>, Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* config/sh/lib1funcs.asm (GLOBAL): Define.  Use for all
+	references to GLOBAL symbols.  Use LOCAL where appropriate.
+
 2000-08-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* configure.in (*-ibm-aix4.[12]*): Delete test for gnu ld.  Always
