--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-17  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* class.c (instantiate_type): Reinstate local variable
+	deleted in previous change.
+
+2000-08-17  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* cp-tree.h (instantiate_type_flags): New enumeration.
 	(instantiate_type): Change parameter.
 	* class.c (instantiate_type): Adjust prototype. Adjust.
