* cvt.c (cp_convert_to_pointer): Pass itf_complain, not 	itf_no_attributes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35759 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -2,6 +2,9 @@
 
 	* class.c (instantiate_type): Reinstate local variable
 	deleted in previous change.
+	
+	* cvt.c (cp_convert_to_pointer): Pass itf_complain, not
+	itf_no_attributes.
 
 2000-08-17  Nathan Sidwell  <nathan@codesourcery.com>
 
