* vec.cc (__cxa_vec_new): Set "C" linkage. 	(__cxa_vec_ctor): Likewise. 	(__cxa_vec_cctor): Likewise. 	(__cxa_vec_dtor): Likewise. 	(__cxa_vec_delete): Likewise. 	* inc/cxxabi.h (__cxa_vec_new): Set "C" linkage. 	(__cxa_vec_ctor): Likewise. 	(__cxa_vec_cctor): Likewise. 	(__cxa_vec_dtor): Likewise. 	(__cxa_vec_delete): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35760 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,18 @@
 2000-08-17  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* vec.cc (__cxa_vec_new): Set "C" linkage.
+	(__cxa_vec_ctor): Likewise.
+	(__cxa_vec_cctor): Likewise.
+	(__cxa_vec_dtor): Likewise.
+	(__cxa_vec_delete): Likewise.
+	* inc/cxxabi.h (__cxa_vec_new): Set "C" linkage.
+	(__cxa_vec_ctor): Likewise.
+	(__cxa_vec_cctor): Likewise.
+	(__cxa_vec_dtor): Likewise.
+	(__cxa_vec_delete): Likewise.
+
+2000-08-17  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* class.c (instantiate_type): Reinstate local variable
 	deleted in previous change.
 	
