--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-17  Rodney Brown  <RodneyBrown@mynd.com>
+
+	* cse.c (insert_regs): Remove unused `regno'.
+
 2000-08-17  Neil Booth  <NeilB@earthling.net>
 
 	* (cppinit.c) merge_include_chains: Use remove_dup_dir,
