--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+Thu Aug 17 22:40:05 EDT 2000  John Wehle  (john@feith.com)
+
+	* alias.c (true_dependence, write_dependence_p): A read
+	involving a label_ref or the constant pool doesn't create
+	a dependency.
+
+	* rtl.h (unchanging): Improve documentation.
+
 2000-08-17  Rodney Brown  <RodneyBrown@mynd.com>
 
 	* cse.c (insert_regs): Remove unused `regno'.
