--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* decl2.c (arg_assoc_type): Cope with TYPENAME_TYPE.
+
+2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* cp-tree.h (enum_name_string): Remove prototype.
 	(report_case_error): Remove prototype.
 	* cp/typeck2.c (enum_name_string): Remove.
