--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,21 @@
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* cp-tree.h (PTRMEM_OK_P): New macro.
+	(itf_ptrmem_ok): New enumeration value.
+	* class.c (resolve_address_of_overloaded_function): Add PTRMEM
+	argument. Diagnose implicit pointer to member.
+	(instantiate_type): Don't diagnose implicit pointer to member
+	here. Pass itf_ptrmem_ok if ok. Adjust calls to
+	resolve_address_of_overloaded_function.
+	* init.c (build_offset_ref): Set PTRMEM_OK_P.
+	(resolve_offset_ref): Don't diagnose implicit pointer to member here.
+	* semantics.c (finish_parenthesized_expr): Clear OFFSET_REFs here.
+	* typeck.c (build_x_unary_op): Calculate PTRMEM_OK_P.
+	(build_unary_op): Deal with single non-static member in
+	microsoft-land.
+
+2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* decl2.c (arg_assoc_type): Cope with TYPENAME_TYPE.
 
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
