--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* decl2.c (grokfield): Set CLASSTYPE_GOT_SEMICOLON on class
+	TYPE_DECLs.
+
+2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* cp-tree.h (PTRMEM_OK_P): New macro.
 	(itf_ptrmem_ok): New enumeration value.
 	* class.c (resolve_address_of_overloaded_function): Add PTRMEM
