* g++.old-deja/g++.other/typedef8.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35780 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.other/typedef8.C: New test.
+
+2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.benjamin/13478.C: Mark candidate.
 	* g++.old-deja/g++.mike/net36.C: Mark candidate.
 	* g++.old-deja/g++.robertl/eb131.C: Mark candidate.
