--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-18  Emmanuel Marty  <emarty@suntech.fr>
+
+	* arm/lib1funcs.asm (_umodsi3 THUMB VARIANT): Restore deleted return
+	insn.
+
 2000-08-17  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/ia64.c (spill_restore_mem): Handle emitting
