* editbuf.h (edit_streambuf): Fix syntax error in 	friend-declaration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35782 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libio/ChangeLog
+++ b/libio/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-18  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
+
+	* editbuf.h (edit_streambuf): Fix syntax error in
+	friend-declaration. 
+
 2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*.
