--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,7 +1,14 @@
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* decl.c (member_function_or_else): Use cp_error ... %T.
+	(grokdeclarator): Likewise.
+	(start_method): Likewise.
+	* friend.c (make_friend_class): Use cp_pedwarn ... %T.	
+
+2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* decl2.c (grokfield): Set CLASSTYPE_GOT_SEMICOLON on class
-	TYPE_DECLs.
+	TYPE_DECLs.	
 
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
 
