--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-18  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/format-va-1.c: New test.
+
 2000-08-18  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.other/typedef8.C: New test.
